[gd_scene load_steps=6 format=3 uid="uid://bukps2fe7uctp"]

[ext_resource type="FontFile" uid="uid://bo1xqkmaq87nb" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_hl8y1"]
[ext_resource type="Theme" uid="uid://mobqgno86x37" path="res://assets/themes/default_theme.tres" id="1_ovjgv"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="2_g7kjx"]
[ext_resource type="PackedScene" uid="uid://dgygkbtm0burn" path="res://addons/quiver_leaderboards/leaderboard_ui.tscn" id="4_tckdt"]
[ext_resource type="PackedScene" uid="uid://dlsn4fwsbd5nx" path="res://scenes/user_interface.tscn" id="5_fyavr"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ovjgv")
script = ExtResource("2_g7kjx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.089889, 0.000108192, 0.171655, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_hl8y1")
theme_override_font_sizes/font_size = 64
text = "Butter Knight"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_hl8y1")
theme_override_font_sizes/font_size = 64
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../EndGameButton")
focus_neighbor_bottom = NodePath("../HighScoreButton")
focus_next = NodePath("../HighScoreButton")
focus_previous = NodePath("../EndGameButton")
theme_override_fonts/font = ExtResource("1_hl8y1")
theme_override_font_sizes/font_size = 32
text = "Start Game"

[node name="HighScoreButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../ChangeNameButton")
focus_next = NodePath("../ChangeNameButton")
focus_previous = NodePath("../StartGameButton")
theme_override_fonts/font = ExtResource("1_hl8y1")
theme_override_font_sizes/font_size = 32
text = "High Scores"

[node name="ChangeNameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../HighScoreButton")
focus_neighbor_bottom = NodePath("../EndGameButton")
focus_next = NodePath("../EndGameButton")
focus_previous = NodePath("../HighScoreButton")
theme_override_fonts/font = ExtResource("1_hl8y1")
theme_override_font_sizes/font_size = 32
text = "Change Name
"

[node name="EndGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../ChangeNameButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
focus_previous = NodePath("../ChangeNameButton")
theme_override_fonts/font = ExtResource("1_hl8y1")
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="LeaderboardUI" parent="." instance=ExtResource("4_tckdt")]
visible = false
layout_mode = 1
leaderboard_id = "butter-knights-butter-knights-2wUo"

[node name="CloseButton" type="Button" parent="LeaderboardUI"]
layout_mode = 2
offset_left = 501.0
offset_top = 560.0
offset_right = 651.0
offset_bottom = 576.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../MarginContainer/VBoxContainer/ButtonsVBox/EndGameButton")
focus_neighbor_bottom = NodePath("../../MarginContainer/VBoxContainer/ButtonsVBox/EndGameButton")
focus_next = NodePath("../../MarginContainer/VBoxContainer/ButtonsVBox/EndGameButton")
focus_previous = NodePath("../../MarginContainer/VBoxContainer/ButtonsVBox/EndGameButton")
theme_override_fonts/font = ExtResource("1_hl8y1")
text = "Close
"

[node name="UserInterface" parent="." instance=ExtResource("5_fyavr")]
visible = false
layout_mode = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/HighScoreButton" to="." method="_on_high_score_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/ChangeNameButton" to="." method="_on_change_name_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/EndGameButton" to="." method="_on_end_game_button_pressed"]
[connection signal="pressed" from="LeaderboardUI/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="visibility_changed" from="UserInterface" to="." method="_on_user_interface_visibility_changed"]
